project/tests/in_progress/for_main/bad/types/base_types/type_char/type_char06.c
#include <stdio.h>

signed char c1 = 67;

int main() {
  printf("%d\n", c1);
  printf("%c\n", c1);

  return 0;
}
